# Ruxy

./: Cargo.toml  build.rs
src/: main.rs  org.tyl3rsec.Ruxy.gschema.xml
src/resources/: ruxy.gresource.xml  window.ui
src/window/: imp.rs  mod.rs
