[package]
name = "ruxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adw = { version = "0.2.1", package = "libadwaita" }
gtk = { version = "0.5.3", package = "gtk4" }
once_cell = "1.16.0"

[build-dependencies]
glib-build-tools = "0.16.3"
